Lumina/src/luminapanel.scss
/* ... */
@media (min-width: 3840px) {
    .Panel {
        width: 70rem; /* ~1120px */
        height: 35rem; /* ~560px */
        max-height: 30rem; /* ~480px */
    }
}

.Span1
{
    width: 1500rem;
    height: 200rem;
}

.LuminaBckImage
{
    position: absolute;
    right: 200rem;
    width: 100%;
    height: 100%;
}

.TabsRow
{
    position: absolute;
    display: flex;
    width: 950rem;
    height: 50rem;
    top: -650rem;
    left:100rem;
    border-radius: 20rem; /* Rounded corners */
    background-color: rgba(50, 50, 50, 0.8); /* Dark grey background with transparency */
    box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.6); /* Blurred black inner shadow */
    color: #e0e0e0; /* Light grey text color for contrast */
    font-family: Overpass,"Noto Sans","Noto Sans KR","Noto Sans JP","Noto Sans SC","Noto Sans TC","Noto Sans Thai","Noto Sans Hebrew","Noto Sans Arabic","Noto Sans Bengali","Noto Sans Devanagari", sans-serif; /* Clean and modern font */
    pointer-events: auto;
}


    .TabsRow > *
    {
        filter: invert(100%);
        width: 50rem; /* Adjust the width of each child element */
        height: 50rem; /* Adjust the height of each child element to match the width for perfect circles */
        display: flex; /* Ensure that child elements use flexbox layout */
        align-items: center; /* Center contents vertically */
        justify-content: center; /* Center contents horizontally */
    }

.ColorAdjustmentsButton
{
    position: absolute;
    display: flex;
    background-image: url('coui://ui-mods/Icons/ColorAdjustments.svg');
    background-size: cover; /* Make sure the background image covers the entire area */
    width: 45rem;
    height: 45rem;
    left: 900rem; /* Adjusted left position */
    transition: transform 0.01s ease-in-out;
}

.ColorAdjustmentsButtonDeselected
{
    position: absolute;
    display: flex;
    background-image: url('coui://ui-mods/Icons/ColorAdjustments.svg');
    background-size: cover; /* Make sure the background image covers the entire area */
    width: 45rem;
    height: 45rem;
    left: 900rem; /* Adjusted left position */
    transition: transform 0.01s ease-in-out;
}

.SettingsButton
{
    position: absolute;
    background-image: url('coui://ui-mods/Icons/SettingsGear.svg');
    background-size: cover; /* Make sure the background image covers the entire area */
    width: 45rem;
    height: 45rem;
    left: 0rem;
    transition: transform 0.01s ease-in-out;
    border-radius: 50%; /* Make it round */
    filter: invert(100%);
}

.SettingsButtonDeselected
{
    position: absolute;
    background-image: url('coui://ui-mods/Icons/SettingsGear.svg');
    background-size: cover; /* Make sure the background image covers the entire area */
    width: 45rem;
    height: 45rem;
    left: 0rem;
    transition: transform 2s ease-in-out;
    border-radius: 50%; /* Make it round */
    filter: invert(100%);
}

.PlanetaryButton
{
    position: absolute;
    background-image: url('coui://ui-mods/Icons/Planet.svg');
    background-size: cover; /* Make sure the background image covers the entire area */
    width: 43rem;
    height: 43rem;
    left: 850rem; /* Adjusted left position */
    transition: transform 0.01s ease-in-out;
    border-radius: 50%; /* Make it round */
}

.PlanetaryButtonDeselected
{
    position: absolute;
    background-image: url('coui://ui-mods/Icons/Planet.svg');
    background-size: cover; /* Make sure the background image covers the entire area */
    width: 43rem;
    height: 43rem;
    left: 850rem; /* Adjusted left position */
    transition: transform 2s ease-in-out;
    border-radius: 50%; /* Make it round */
}

.PlanetaryButton:hover
{
    transform: translateY(-15%);
}

//Tonemapping

.TonemappingButton
{
    position: absolute;
    background-image: url('coui://ui-mods/Icons/CwrbLHu.png');
    background-size: cover; /* Make sure the background image covers the entire area */
    width: 43rem;
    height: 43rem;
    left: 800rem;
    transition: transform 0.01s ease-in-out;
    border-radius: 50%; /* Make it round */
}

.TonemappingButtonDeselected
{
    position: absolute;
    background-image: url('coui://ui-mods/Icons/CwrbLHu.png');
    background-size: cover; /* Make sure the background image covers the entire area */
    width: 43rem;
    height: 43rem;
    left: 800rem; /* Adjusted left position */
    transition: transform 2s ease-in-out;
    border-radius: 50%; /* Make it round */
}

.TonemappingButton:hover
{
    transform: translateY(-15%);
}


.SkyAndFogButton
{
    position: absolute;
    background-image: url('coui://ui-mods/Icons/suuIDOT.png');
    background-size: cover; /* Make sure the background image covers the entire area */
    width: 43rem;
    height: 43rem;
    left: 750rem;
    transition: transform 0.01s ease-in-out;
    border-radius: 50%; /* Make it round */
}

.SkyAndFogButtonDeselected
{
    position: absolute;
    background-image: url('coui://ui-mods/Icons/suuIDOT.png');
    background-size: cover; /* Make sure the background image covers the entire area */
    width: 43rem;
    height: 43rem;
    left: 750rem;
    transition: transform 2s ease-in-out;
    border-radius: 50%; /* Make it round */
}

.SkyAndFogButton:hover
{
    transform: translateY(-15%);
}


.LUTInputText
{
    position: absolute;
    color: transparent;
    width: 500rem;
    top: 50rem;
    left: 20rem;
}

.LUTContributionSlider
{
    position: absolute;
    height: 30rem;
    top: 250rem;
    right: -120rem;
    left: 250rem;
    width: 500rem;
    background-color: rgba(0, 0, 0, 0.5);
}

.LUTContributionInput
{
    position: absolute;
    color: rgb(118, 118, 118);
    font-size: 20rem;
    top: 250rem;
    left: 155rem;
    width: 50rem;
}




.ColorAdjustmentsButton:hover
{
    transform: translateY(-15%);
}



.SettingsButton:hover
{
    transform: translateY(-15%);
}


.Global
{
    pointer-events: auto;
}
/* ... */

